--- a/rick_and_morty.html
+++ b/rick_and_morty.html
@@ -7,6 +7,8 @@
     <title>Rick and Morty Characters</title>
 </head>
 <body>
+    <main>
+        <h1>Rick and Morty Characters</h1>
 
     <div>
         <table>
@@ -347,6 +349,6 @@
         </table>
         <a href="https://rickandmortyapi.com/api/character/20">Source Material</a>
     </div>
-    
+    </main>
 </body>
 </html>
